Fix missing border on new message textarea

--- a/axolotl-web/src/assets/dark.scss
+++ b/axolotl-web/src/assets/dark.scss
@@ -4,7 +4,6 @@ $hover-bg: #444;
 // Bootstrap variables
 $body-bg: #000;
 $body-color: #ccc;
-$input-bg: #999;
 
 $input-bg: #999;
 $input-border-color: #999;
